# ICS-WT-PhysicsEngine

./: .gitignore  README.md  pyproject.toml
src/wt_simulator/: __main__.py
src/wt_simulator/core/: README.md  __init__.py  chemistry.py  reactor.py  spatial.py  thermodynamics.py  transport.py
src/wt_simulator/modbus/: README.md  __init__.py  protocols.py  register_map.py  slave.py
src/wt_simulator/sensors/: README.md  __init__.py  base_sensor.py  chlorine_sensor.py  flow_sensor.py  ph_sensor.py  temperature_sensor.py
